tests/e2e/destructoring3.error
Error: syntax error in story at line 2, column 4

2|    {} = obj
         ^^^^^

E0073: Objects destructoring requires variable names.
